# deadlock-lsp

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-BSD3  README.md  a.json  build.sh  rust-toolchain.toml  settings.example.json  test.sh
docker/checker/: Dockerfile
editors/code/: CHANGELOG.md  README.md  package-lock.json  package.json
editors/code/src/: client.ts  config.ts  context.ts  detector.ts  extension.ts
examples/intra/.dl/: out.json
examples/intra/.rda/: a.json
examples/intra/src/: main.rs
scripts/: test.sh
src/: lib.rs  utils.rs
src/analysis/: call_graph.rs  lifetime.rs  mod.rs  range.rs
src/lsp/: global_ctxt.rs  lockbud_ty.rs  mod.rs
