[package]
name = "deadlock-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustc"
path = "src/bin/rustc/main.rs"

[[bin]]
name = "deadlock-lsp"
path = "src/bin/lsp/main.rs"

[dependencies]
lsp-server = { version = "0.6" }
serde_json = "1.0.34"
serde = { version = "1.0.83", features = ["derive"] }
lsp-types = "0.93.0"
pretty_env_logger = "0.3.1"
log = "0.4"
toml = "0.5"
crossbeam-channel = "0.5.4"

[package.metadata.rust-analyzer] 
rustc_private=true
